      they are not provided in the ActivityVector list of the DrumSequenceEngine. This removes the need to apply the workaround of using
      dummy patterns.

    - Added support for specifying a crossoverPitch attribute per chordPattern tag in the PatternHarmonyEngine.
      If set, this attribute allows you to override the global crossoverPitch value.

    - Fixed a bug regarding the phase computation for LFOs running in "segmentPair" mode. Whenever the speed was set to something
      other than 1, the off-segment's phase was incorrect.

    - Moved the MIDI device "gervill" to the beginning of the list of MIDI devices in all examples. Set the beforePlayWaitTicks value
      to 16 in all examples. This will fix problems with Windows 10 (and possibly also Windows 8).


0.8: 2015-04-28

    - Added support for conditional LFOs in the DrumSequenceEngine and the MidiPlayer. Similar to conditional patterns, a condition
      can now trigger the usage of an LFO for creating an LFO sequence, which can be used in the MidiPlayer for remote-controlling
      MIDI controllers. In the DrumSequenceEngine, a conditional LFO can be configured via the "conditionalLFO" tag, which can be
      mapped to a MIDI controller in the MidiPlayer via the "instrumentControllerLFO" tag.

    - Added support for velocity scaling in each track in the SimpleArrangementEngine via the new tag "velocity". Each track's note
      velocity is scaled by a factor of the given velocity divided by the song's maximum velocity. For example, if the song's maximum
      velocity is 1000 and you specify 500 in this tag, all velocities of all the track's sequences are halved.

    - Added support for providing a ticks-per-beat value per pattern. If the actual ticks per beat of the song is different (but
      compatible) all note/pause lengths of the pattern are scaled accordingly. For example, you can have a song with a ticks-per-beat